<?php die() ?>
ContactUs 4.0.4
================================================================================
# [HIGH] Immediate exception on Windows
# [HIGH] Unpublished contact categories can be selected in the frontend

ContactUs 4.0.3
================================================================================
# [LOW] PHP 8.1 Deprecated Notice in the Router

ContactUs 4.0.2
================================================================================
# [LOW] PHP Warning from the TriggerEvent mixin

ContactUs 4.0.1
================================================================================
# [HIGH] yet another last minute, undocumented, backwards incompatible change in Joomla is breaking things.

ContactUs 4.0.0
================================================================================
~ Rewritten with Joomla 4 core MVC

Contact Us 3.0.1
================================================================================
- GPG support (incompatible with PHP 8.0)
~ Converted all tables to InnoDB for better performance

Contact Us 3.0.0
================================================================================
+ Rewritten with FOF 4
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
+ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later

Contact Us 2.1.2
================================================================================
- Dropped support for PHP 7.1.0
+ Custom error pages for missing FEF and unhandled PHP exceptions
~ Replace zero datetime with nullable datetime (gh-17)
~ PHP version warning can now handle "too new" versions.
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything

Contact Us 2.1.1
================================================================================
+ Privacy policy consent checkbox (mandatory)